--- a/minhtan.html
+++ b/minhtan.html
@@ -33,10 +33,10 @@
 					<i class="fab fa-youtube"></i>
 				</a>
 				<a target="_black" href="#">
-					<i class="fab fa-tiktok"></i>
-				</a>
-				<a target="_black" href="#">
 					<i class="fab fa-github"></i>
+				</a>
+				<a target="_black" href="https://www.instagram.com/qianmt21">
+					<i style="font-size: 21px" class="fa-brands fa-instagram"></i>
 				</a>
 			</div>
 			<div style="text-align: center">
@@ -54,7 +54,10 @@
 					style="max-width: 300px; height: 200px; border-radius: 5px"
 				>
 					<form class="w3-container" action="/action_page.php">
-						<p>Phone: 0906860900</p>
+						<p>
+							LOVE YOU :33
+							<i class="fa-solid fa-heart"></i>
+						</p>
 						<a
 							href="#auto"
 							onclick="document.getElementById('id01').style.display='none'"
