--- a/minhtan.html
+++ b/minhtan.html
@@ -47,26 +47,29 @@
 					CONTACT ME
 				</button>
 			</div>
-
-			<div id="id01" class="w3-modal">
-				<div
-					class="w3-modal-content w3-card-4 w3-animate-zoom"
-					style="max-width: 300px; height: 200px; border-radius: 5px"
-				>
-					<form class="w3-container" action="/action_page.php">
-						<p>
+		</div>
+		<div id="id01" class="w3-modal">
+			<div
+				class="w3-modal-content w3-card-4 w3-animate-zoom"
+				style="max-width: 300px; height: 200px; border-radius: 5px"
+			>
+				<form class="w3-container" action="/action_page.php">
+					<p>
+						<i class="fa-solid fa-envelope"></i> Mail:
+						contact.doanminhtan@gmail.com <br />
+						<p class="heart">
 							<i class="fa-solid fa-heart"></i>
 						</p>
-						<a
-							href="#auto"
-							onclick="document.getElementById('id01').style.display='none'"
-							class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey"
-							title="close menu"
-						>
-							<i class="fa fa-remove"></i>
-						</a>
-					</form>
-				</div>
+					</p>
+					<a
+						href="#auto"
+						onclick="document.getElementById('id01').style.display='none'"
+						class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey"
+						title="close menu"
+					>
+						<i class="fa fa-remove"></i>
+					</a>
+				</form>
 			</div>
 		</div>
 		<script>
